--- a/ksi.ipynb
+++ b/ksi.ipynb
@@ -22,20 +22,44 @@
     }
    ],
    "source": [
-    "# Mengimport library yang diperlukan\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
     "\n",
     "# Membaca dataset menggunakan pandas\n",
-    "data = pd.read_excel('water_potability.xlsx')\n",
+    "dataset = pd.read_csv(\"water_potability.csv\")\n",
     "\n",
-    "# Menghilangkan kolom 'Potability' karena merupakan target label\n",
-    "X = data.drop('Potability', axis=1)\n",
+    "# Menghilangkan baris dengan nilai NaN pada dataset\n",
+    "dataset = dataset.dropna()\n",
     "\n",
-    "# Menyimpan kolom 'Potability' sebagai target label\n",
-    "y = data['Potability']\n",
+    "# Menambahkan kolom jenis air berdasarkan nilai pH\n",
+    "def get_jenis_air(pH):\n",
+    "    if 7 <= pH <= 7.1:\n",
+    "        return 'Air Keran'\n",
+    "    elif 7 <= pH <= 8:\n",
+    "        return 'Air Laut'\n",
+    "    elif 5 <= pH <= 7:\n",
+    "        return 'Air Suling'\n",
+    "    elif 9 <= pH <= 13:\n",
+    "        return 'Air Alkalin'\n",
+    "    elif 9 <= pH <= 14:\n",
+    "        return 'Air Alkalin (Botol Berlabel)'\n",
+    "    elif 1 <= pH <= 5:\n",
+    "        return 'Air Botol'\n",
+    "    elif pH == 7:\n",
+    "        return 'Air Asam'\n",
+    "    else:\n",
+    "        return 'Unknown'\n",
+    "\n",
+    "dataset['Jenis Air'] = dataset['ph'].apply(get_jenis_air)\n",
+    "\n",
+    "# Menghitung jumlah data dari masing-masing jenis air\n",
+    "jumlah_data = dataset.groupby('Jenis Air').size().reset_index(name='Jumlah Data')\n",
+    "\n",
+    "# Memisahkan dataset menjadi data atribut dan data label\n",
+    "X = dataset.drop(['Potability', 'Jenis Air'], axis=1)\n",
+    "y = dataset['Potability']\n",
     "\n",
     "# Membagi data menjadi data latih dan data uji\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
@@ -49,9 +73,20 @@
     "# Memprediksi data uji\n",
     "y_pred = nb.predict(X_test)\n",
     "\n",
-    "# Menghitung akurasi model\n",
+    "# Menghitung akurasi model, precision, dan recall\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print('Akurasi model: ', accuracy)\n"
+    "precision = precision_score(y_test, y_pred)\n",
+    "recall = recall_score(y_test, y_pred)\n",
+    "\n",
+    "print('Akurasi model: ', accuracy)\n",
+    "print('Precision: ', precision)\n",
+    "print('Recall: ', recall)\n",
+    "\n",
+    "# Menampilkan dataset dengan kolom jenis air\n",
+    "print(dataset)\n",
+    "\n",
+    "# Menampilkan jumlah data dari masing-masing jenis air\n",
+    "print(jumlah_data)\n"
    ]
   }
  ],
